# nmdc-ai-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: main.yaml
datasets/: models.yaml
datasets/ebs-prediction/: README.md  ebs-suite-anthropic.yaml  ebs-suite-openai.yaml  ebs-suite.yaml  generate_suite.py
datasets/submission-metadata-prediction/: README.md  generate_suite.py  sampledata-suite-anthropic.yaml  sampledata-suite-openai.yaml  sampledata-suite.yaml
scripts/: verify_auth.py
src/nmdc_ai_eval/: __init__.py  envo_scorer.py  run_suite.py  score_envo.py
tests/: test_data.py  test_ebs_suite_generation.py  test_envo_scorer.py  test_envo_scorer_extended.py  test_envo_scorer_oaklib.py  test_generate_suite.py  test_score_envo_cli.py  test_suite_data_consistency.py  test_suites.py
tests/fixtures/: mini_results.tsv
