[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "nmdc-ai-eval"
description = "Framework and data for performing evaluations for AI-powered NMDC tools."
authors = [
  {name = "Harry Caufield", email = "jhc@lbl.gov"},
  {name = "Mark Andrew Miller", email = "MAM@lbl.gov"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dynamic = ["version"]

dependencies = [
  "click<8.3",  # pin: llm-matrix 0.1.3 CLI broken with click>=8.3 (typer is_flag/count conflict)
  "ipython>=9.10.0",  # transitive: llm-matrix imports IPython but doesn't declare it
  "llm-matrix>=0.1.3",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.11",
  "pre-commit>=3.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nmdc_ai_eval"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "W",   # pycodestyle warnings
  "B",   # bugbear
  "S",   # bandit (security)
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests
"datasets/**" = ["S311"]  # pseudo-random OK for sampling eval data

[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "datasets/*",
]
quiet-level = 3

[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "datasets/*",
]
